# rust_json_client

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  security-scan.yml  update-msrv.yml
docs/superpowers/plans/: 2026-04-11-http-client-mvp.md  2026-04-12-sse-streaming.md
docs/superpowers/specs/: 2026-04-11-http-client-design.md  2026-04-12-sse-streaming-design.md
examples/: main.rs
scripts/: check.sh
src/: client.rs  error.rs  lib.rs  retry.rs
tests/: integration.rs
