[package]
name = "rust_json_client"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
description = "Opinionated async HTTP client for JSON APIs with retries, size limits, and tracing"
license = "MIT"
repository = "https://github.com/zygmunt-pawel/rust_json_client"
authors = ["Paweł Zygmunt"]
keywords = ["http", "json", "client", "async", "retry"]
categories = ["web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
bon = "3"
url = "2"
getset = "0.1"
backon = { version = "1.6", default-features = false, features = ["std", "tokio-sleep"] }
tokio = { version = "1", default-features = false, features = ["time"] }
tracing = { version = "0.1", features = ["attributes"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
