[package]
name = "rust_json_client"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
description = "Opinionated async HTTP client for JSON APIs with retries, size limits, and tracing"
license = "MIT"
repository = "https://github.com/zygmunt-pawel/rust_json_client"
authors = ["Paweł Zygmunt"]
keywords = ["http", "json", "client", "async", "retry"]
categories = ["web-programming::http-client"]

[dependencies]
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "http2", "rustls-tls-webpki-roots"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
thiserror = "=2.0.18"
bon = "=3.9.1"
url = "=2.5.8"
getset = "=0.1.6"
backon = { version = "=1.6.0", default-features = false, features = ["std", "tokio-sleep"] }
tokio = { version = "=1.51.1", default-features = false, features = ["time"] }
tracing = { version = "=0.1.44", features = ["attributes"] }

[dev-dependencies]
tokio = { version = "=1.51.1", features = ["macros", "rt-multi-thread", "time"] }
wiremock = "=0.6.5"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "fmt"] }
